<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/ricewhitegb"
    >
    <!-- 开始：自己的actionbar -->
    <LinearLayout
        android:id="@+id/acti_login_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightActiBar"
        android:orientation="vertical" 
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightActiBarWord"
            android:gravity="center"
            android:text="@string/actionbar_acti_login"
            android:textSize="@dimen/textsizeActiBarWord" 
            android:textColor="@color/colorActionBarWord"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#DCDCDC" >
        </View>
    </LinearLayout>

	<!-- 结束：自己的actionbar -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:layout_below="@id/acti_login_actionbar">

        <!-- username & password -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <!-- username -->

            <EditText
                android:id="@+id/acti_login_et_username"
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/edittext_bg"
                android:textCursorDrawable="@null"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="15.0dip"
                android:drawablePadding="15.0dip"
                android:drawableStart="@drawable/exwidget_clearedittext_left_username"
                android:ems="22"
                android:hint="@string/acti_login_et_username"
                android:inputType="text"
                android:paddingBottom="2.0dip"
                android:paddingEnd="10.0dip"
                android:paddingStart="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColor="@color/colorLightGray"
                android:textColorHint="#ff999999"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/acti_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/edittext_bg"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="10dip"
                android:drawablePadding="15.0dip"
                android:drawableStart="@drawable/exwidget_clearedittext_left_pwd"
                android:ems="22"
                android:hint="@string/acti_login_et_password"
                android:inputType="textPassword"
                android:paddingBottom="2.0dip"
                android:paddingEnd="10.0dip"
                android:paddingStart="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColor="@color/colorLightGray"
                android:textColorHint="#ff999999"
                android:textSize="17sp" />
            
            <!-- 记住密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30.0dip"
                android:layout_marginBottom="50dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/acti_login_cb_rememberpwd"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dip"
                    android:layout_weight="1"
                    android:text="@string/acti_login_cb_rememberpwd"
                    android:textColor="@color/colorLightGray"
                    android:textSize="17sp" />

            </LinearLayout>
            
           <!-- btn login and register -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/acti_login_btn_login"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="20dip"
                    android:background="@color/lightblue"
                    android:text="@string/acti_login_btn_login"
                    android:textColor="@color/colorWordsOnButton"
                    android:textSize="18.0sp" />

                <Button
                    android:id="@+id/acti_login_btn_toregister"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dip"
                    android:layout_marginEnd="20dip"
                    android:background="@color/sandybrown"
                    android:text="@string/acti_login_btn_register"
                    android:textColor="@color/colorWordsOnButton"
                    android:textSize="18.0sp" />
            </LinearLayout>
     
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>